--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
 }
 .btn:hover{
     background: transparent;
-    color: #3eff37;
+    color: #ff37a5;
     
 }
 .about-container{
@@ -83,15 +83,41 @@
 }
 .about-us-p{
     font-size: 18px;
+    margin: 10px 0;
+    padding: 10px;
 }
-.about-button{
-    background-color: #DA2863;
+.service-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 80vh;
     color: white;
-    font-size: 20px;
-    font-weight: bold;
-    border: none;
+    
+}
+.box-o{
+    width: 250px;
+    height: 250px;
+    box-shadow: 4px 4px 400px 8px lightgray;
+    background-color: black;
+    text-align: center;
     padding: 15px;
-    cursor: pointer;
-    margin-top: 15px;
+    border-radius: 5px;
+}
+.icon-o{
+    width: 100px;
+}
+.btn-box{
+    color: white;
+    background-color: rgb(218, 40, 99);
+    padding: 12.5px 20px;
+    font-size: 20px;
+    margin: 20px 0;
     border: none;
+}
+
+.linear{
+    background-image: url('./photos/background.png');
+    background-color: black;
+    text-align: center;
+    color: aliceblue;
 }
