--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
 }
 .about-container{
     display: flex;
-    height: 40vh;
+    height: 80vh;
     justify-content: space-around;
     align-items: center;
 }
@@ -72,6 +72,7 @@
     text-align: center;
     font-size: 46px;
     font-weight: bold;
+    margin-top: 40px;
 }
 .about-img{
     width: 300px;
@@ -84,7 +85,7 @@
 .about-us-p{
     font-size: 18px;
     margin: 10px 0;
-    padding: 10px;
+    padding: 10px;   
 }
 .service-container{
     display: flex;
@@ -120,4 +121,26 @@
     background-color: black;
     text-align: center;
     color: aliceblue;
+    padding-top: 40px;
+}
+.footer-container{
+    background-color: #111111;
+    color: whitesmoke;
+    height: 70vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 2px solid #DA2863;
+
+}
+.footer-item{
+    font-size: 21px;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.footer-i{
+    font-size: 14px;
+    padding: 20px;
+    font-weight: normal;
+    font-family: 'Courier New', Courier, monospace;
 }
